--- a/requirements.txt
+++ b/requirements.txt
@@ -77,7 +77,7 @@ pycparser==2.21
 Pygments==2.17.2
 python-dateutil==2.9.0.post0
 python-docx==1.1.2
-python-json-logger==2.0.7
+python-json-logger==2.0.7s
 PyYAML==6.0.1
 pyzmq==25.1.2
 qtconsole==5.5.1
